<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gamehelp"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:id="@+id/help1"
        android:gravity="center_horizontal"
        android:textColor="#0000ff"
        android:textSize="20sp"
        android:typeface="serif"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/help2"
        android:gravity="center_horizontal"
        android:typeface="serif"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortdesc"
        android:gravity="center_horizontal"
        android:id="@+id/help3"
        android:textColor="#0000ff"
        android:textSize="20sp"
        android:typeface="serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:typeface="serif"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#f44336"
        android:textSize="20sp"
        android:typeface="serif"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textColor="#0000ff"
            android:textSize="20sp"
            android:id="@+id/developer"
            android:typeface="serif"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="8dp"/>

        <ImageView android:src="@drawable/me"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/email"
            android:layout_toEndOf="@+id/email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/email"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/developer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/cont"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb"
            android:id="@+id/fb"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/cont"/>

    </RelativeLayout>

</LinearLayout>
