<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="16"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context="org.bluechat.blueflood.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        >
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/solver"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="buttonhandler"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:layout_marginRight="1dp"
            android:background="@drawable/roundgridview"
            android:text="@string/btnmygame"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:onClick="buttonhandler"
            android:layout_marginLeft="1dp"

            android:textColor="#ffffff"
            android:background="@drawable/roundgridview"
            android:text="@string/btnsolution"
            tools:ignore="NestedWeights"
            android:layout_weight="1"
            />
    </LinearLayout>
        <TextView
            android:id="@+id/top"
            android:layout_width="match_parent"
            tools:ignore="NestedWeights"
            android:layout_height="0dp"
            android:textStyle="italic"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center"
            android:typeface="serif"
            android:text="@string/move"
            />
    </LinearLayout>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:numColumns="auto_fit"
        android:layout_margin="6dp"
        android:stretchMode="columnWidth"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/gridView"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/roundgridtextbg"
        android:layout_weight="4"
        android:weightSum="2"
        android:layout_height="0dp">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/color"
        android:weightSum="6"
        tools:ignore="NestedWeights"
        android:layout_weight="1"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttoninput"
            android:background="@drawable/roundred"
            android:layout_margin="6dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/c2"
            android:background="@drawable/roundgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttoninput"
            android:layout_margin="6dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttoninput"
            android:layout_weight="1"
            android:layout_margin= "6dp"
            android:background="@drawable/roundblue"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttoninput"
            android:layout_margin="6dp"
            android:background="@drawable/roundyellow"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/c5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttoninput"
            android:layout_weight="1"
            android:background="@drawable/roundsky"
            android:layout_margin="6dp"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/c6"
            android:layout_width="wrap_content"
            android:layout_margin="6dp"
            android:layout_height="wrap_content"
            android:onClick="buttoninput"
            android:background="@drawable/roundpink"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/control"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:src="@drawable/ic_button_add"
        android:id="@+id/newgame"
            android:layout_weight="1"
            android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            tools:ignore="NestedWeights"
        android:onClick="buttonhandler"
            android:text="new game"
        />
        <ImageButton
            android:src="@drawable/ic_new"
            android:id="@+id/settings"
            android:layout_weight="1"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonhandler"
            android:text="settings"
            />
        <ImageButton
            android:src="@drawable/ic_left"
            android:id="@+id/undo"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonhandler"
            android:background="@null"
            android:text="undo"
            />
        <ImageButton
            android:src="@drawable/ic_right"
            android:id="@+id/redo"
            android:layout_weight="1"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonhandler"
            android:text="redo"
            />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>